--- a/images/search/Dockerfile
+++ b/images/search/Dockerfile
@@ -5,56 +5,11 @@
 ARG ESGF_REPOSITORY_BASE=esgfdeploy
 ARG ESGF_IMAGES_VERSION=latest
 
-#####
-# Stage 1: Build esg-search and dependencies from GitHub
-#####
+# Make a reference to the builder
+# We have to do this as a FROM because we can't use variables in COPY --from
+FROM ${ESGF_REPOSITORY_BASE}/search-builder:${ESGF_IMAGES_VERSION} as builder
 
-FROM ${ESGF_REPOSITORY_BASE}/jdk:${ESGF_IMAGES_VERSION} as builder
-
-# Install dependencies
-RUN yum makecache && \
-    yum install -y git ant ivy && \
-    yum clean all
-
-# Build esgf-node-manager
-ARG ESGF_NODE_MANAGER_VERSION=15682f64212782a56eacdb356432e9e21d643e1d
-RUN git clone https://github.com/ESGF/esgf-node-manager.git /src/esgf-node-manager && \
-    pushd /src/esgf-node-manager && \
-    git checkout $ESGF_NODE_MANAGER_VERSION && \
-    popd
-RUN pushd /src/esgf-node-manager && \
-    ant clean_all make_dist publish_local && \
-    popd
-
-# Build esgf-security
-ARG ESGF_SECURITY_VERSION=a510b3f4807a683e34e32ffae11ee45f6481fd59
-RUN git clone https://github.com/ESGF/esgf-security.git /src/esgf-security && \
-    pushd /src/esgf-security && \
-    git checkout $ESGF_SECURITY_VERSION && \
-    popd
-RUN pushd /src/esgf-security && \
-    ant clean_all make_dist publish_local && \
-    popd
-
-# # Build esg-search
-ARG ESG_SEARCH_VERSION=2cf9496b512bafcd880e4eb573764641c8971655
-RUN git clone https://github.com/ESGF/esg-search.git /src/esg-search && \
-    pushd /src/esg-search && \
-    git checkout $ESG_SEARCH_VERSION && \
-    popd
-RUN pushd /src/esg-search && \
-    ant clean_all make_dist publish_local && \
-    popd
-
-# Unpack the esg-search war into /application
-RUN mkdir /application && \
-    pushd /application && \
-    jar xvf /src/esg-search/dist/esg-search.war
-
-#####
-# Stage 2: Build runtime image
-#####
-
+# Build the runtime image
 FROM ${ESGF_REPOSITORY_BASE}/tomcat:${ESGF_IMAGES_VERSION}
 
 USER root
