--- a/deploy/kubernetes/chart/files/search/esgf.properties
+++ b/deploy/kubernetes/chart/files/search/esgf.properties
@@ -1,6 +1,6 @@
 # esgf.properties file for the search application
 {{- $solr := .Values.index.solr -}}
-{{- if $solr.localEnabled }}
+{{- if $solr.enabled }}
 esg.search.solr.query.url=http://{{ include "esgf.component.fullname" (list . "solr" "slave") }}:8983/solr
 esg.search.solr.publish.url=http://{{ include "esgf.component.fullname" (list . "solr" "master") }}:8983/solr
 {{- else }}
