--- a/deploy/kubernetes/chart/templates/solr/replica-service.yaml
+++ b/deploy/kubernetes/chart/templates/solr/replica-service.yaml
@@ -1,5 +1,5 @@
-{{- if .Values.index.enabled -}}
 {{- $solr := .Values.index.solr -}}
+{{- if and .Values.index.enabled $solr.enabled -}}
 {{- range $index, $replica := $solr.replicas -}}
 ---
 apiVersion: v1
