Search + Solr master/slave working

--- a/deploy/ansible/playbook.yml
+++ b/deploy/ansible/playbook.yml
@@ -8,5 +8,6 @@
   become: true
   roles:
     - docker
-    - { name: data, when: "'data' in group_names", tags: [data] }
+    - { name: data, tags: [data] }
+    - { name: index, tags: [index] }
     - proxy
