--- a/deploy/ansible/roles/data/tasks/thredds_install.yml
+++ b/deploy/ansible/roles/data/tasks/thredds_install.yml
@@ -31,7 +31,7 @@
     image: "{{ thredds_image_prefix }}/{{ thredds_image_repository }}:{{ thredds_image_tag }}"
     pull: "{{ thredds_image_pull }}"
     detach: yes
-    restart_policy: on-failure
+    restart_policy: unless-stopped
     exposed_ports:
       - "8080"
     networks:
