--- a/deploy/kubernetes/chart/templates/solr/slave-deployment.yaml
+++ b/deploy/kubernetes/chart/templates/solr/slave-deployment.yaml
@@ -36,6 +36,7 @@ spec:
           args:
             - solr
             - -f
+            - "-Dmaster.enable=true"
             - "-Dslave.enable=true"
             - "-Dslave.masterUrl=http://{{ include "esgf.component.fullname" (list . "solr" "master") }}:8983/solr"
             - "-Dslave.pollInterval={{ $solr.slavePollInterval }}"
