Fixed build issues with IDP proxy image

--- a/images/idp-proxy/Dockerfile
+++ b/images/idp-proxy/Dockerfile
@@ -12,9 +12,15 @@ ARG THEME_NAME=esgf
 
 FROM ${ESGF_REPOSITORY_BASE}/base:${ESGF_IMAGES_VERSION} as theme-source
 
+USER root
+
+# Redeclare ARGs
+ARG THEME_GIT_REPOSITORY
+ARG THEME_GIT_VERSION
+
 # Install Git and clone the theme repository
 RUN yum makecache && yum install -y git && yum clean all
-RUN git clone --single-branch --b $THEME_GIT_VERSION $THEME_GIT_REPOSITORY /source
+RUN git clone --single-branch -b $THEME_GIT_VERSION $THEME_GIT_REPOSITORY /source
 
 
 FROM ${ESGF_REPOSITORY_BASE}/keycloak:${ESGF_IMAGES_VERSION}
@@ -23,6 +29,7 @@ FROM ${ESGF_REPOSITORY_BASE}/keycloak:${ESGF_IMAGES_VERSION}
 ARG THEME_NAME
 COPY --from=theme-source /source/theme/$THEME_NAME \
         /opt/jboss/keycloak/themes/$THEME_NAME
+
 # Setup custom realm import
 COPY realm.json /opt/jboss/deploy/realm.json
 ENV KEYCLOAK_IMPORT /opt/jboss/deploy/realm.json
